# nsg-fork

./: .gitignore  .justfile  CMakeLists.txt  Cargo.toml  analyze_cache.nu  clone.nu  echo_static.nu  expr.md  parse.nu  run_all.nu  run_parallel.nu  run_static.nu
final_result/: parse_cache.nu
include/efanna2e/: async_task_pool.h  avx256.h  avx512.h  bdfs.h  bfs.h  dfs.h  index.h  index_nsg.h  index_nsg_sjq.h  index_nsg_sjq_async.h  index_nsg_sjq_async_overleave.h  index_nsg_sjq_overleave.h  index_nsg_sjq_static.h  index_nsg_sjq_static_omp_dynamic.h  index_nsg_sjq_static_omp_static.h  neighbor.h  task_pool.h
run_perf/: run.nu
rust-crates/: Cargo.toml
rust-crates/rust-lib/: CMakeLists.txt  Cargo.toml  rust-lib.h
rust-crates/rust-lib/src/: distance.rs  fvec.rs  knn_graph.rs  lib.rs  nsg_index.rs
rust-crates/rust-tools/: Cargo.toml
rust-crates/rust-tools/src/: lib.rs  main.rs
rust-crates/rust_lib/: CMakeLists.txt  Cargo.toml
rust-crates/rust_lib/src/: bdfs.rs  bfs.rs  dfs.rs  distance.rs  fvec.rs  knn_graph.rs  lib.rs  nsg_index.rs
rust-lib/: cbindgen.toml
rust-lib/src/: bdfs.rs  bfs.rs  knn_graph.rs  lib.rs
rust-tools/: Cargo.toml
rust-tools/src/: main.rs
rust_lib/: CMakeLists.txt  Cargo.toml
rust_lib/src/: lib.rs
scripts/: check_graph.nu  run_nsg_index.nu
src/: CMakeLists.txt  async_task_pool.cpp  index_nsg.cpp  index_nsg_sjq.cpp  index_nsg_sjq_async.cpp  index_nsg_sjq_async_overleave.cpp  index_nsg_sjq_overleave.cpp  index_nsg_sjq_static.cpp  index_nsg_sjq_static_omp_dynamic.cpp  index_nsg_sjq_static_omp_static.cpp  task_pool.cpp
tests/: CMakeLists.txt  fix_nn.cpp  sjq_test_nsg_index.cpp  sjq_test_nsg_index_static.cpp  sjq_test_nsg_index_static_bdfs.cpp  sjq_test_nsg_index_static_bfs.cpp  sjq_test_nsg_index_static_dfs.cpp  sjq_test_nsg_index_static_omp_dynamic.cpp  sjq_test_nsg_index_static_omp_static.cpp  task_demo.cpp  test_fvec.cpp  test_nn.cpp  test_nsg_index.cpp  test_traversal.cpp
unit_tests/: CMakeLists.txt  test.cpp  test_bfs.cpp  test_omp.cpp  test_task.cpp
