[package]
name = "rust-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.9.0"
"rust-lib" ={ path = "../rust-lib" }
serde_json = "1.0.114"
tracing = "0.1.40"