[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
itertools = "0.12.1"
rayon = "1.9.0"
bitvec = "1.0.1"
rand = "0.8.5"
serde_json = "1.0.114"
[build-dependencies]
cbindgen = "0.26.0"

[features]
avx512 = []
default = ["avx512"]
